Made the main title larger. Fixed the spacing between the product cards. Resized the logo imgs

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 * {
     margin: 0;
-    font-family:'Roboto', sans-serif;
+    font-family: 'Roboto', sans-serif;
 }
 .grid {
     display: flex;
@@ -16,10 +16,12 @@ nav {
 }
 .nav-links {
     display: flex;
-    width: 70%;
-    justify-content: space-around;
+    width: 100%;
+    justify-content: space-evenly;
+    font-weight: 700;
+    color: black;
 }
-.nav-link {
+a.nav-link {
     text-decoration: none;
     color: black;
 }
@@ -36,6 +38,14 @@ ul {
 .main-img {
     max-width: 100%;
     margin-top: -1rem;
+}
+.sign-up h1 {
+    font-size: 3rem;
+    font-weight: 700;
+    line-height: 1.2;
+}
+.main-blurb {
+    rgb(46, 46, 46)
 }
 form {
     text-align: center;
@@ -80,6 +90,9 @@ section h2 {
     display: flex;
     justify-content: center;
 }
+.wrapper img {
+    width: 3rem;
+}
 .more-info h3 {
     font-size: 1.9rem;
     padding: 0;
@@ -89,6 +102,9 @@ section h2 {
     background-color: #F5F5F5;
     margin: 1rem 0;
     padding: 1.5rem 2rem;
+}
+.info-blurb p {
+    color: rgb(46, 46, 46);
 }
 div.info-blurb {
     margin: 2rem 0;
@@ -110,13 +126,13 @@ section.video{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin: 2rem;
 }
 .product-cards {
     border: 1px solid rgb(167, 165, 165);
     padding: 1.5rem;
     border-radius: 1rem;
     box-shadow: 0 10px 6px -6px #777;
+    margin: 1.5rem 0;
 }
 .product-cards:hover {
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
